# z-score-mean-reversion-backtester

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
data/: ADANIENT.csv  ADANIPORTS.csv  APOLLOHOSP.csv  ASIANPAINT.csv  AXISBANK.csv  BAJAJ-AUTO.csv  BAJAJFINSV.csv  BAJFINANCE.csv  BANKBEES.csv  BEL.csv  BHARTIARTL.csv  CIPLA.csv  COALINDIA.csv  DRREDDY.csv  EICHERMOT.csv  ETERNAL.csv  GRASIM.csv  HCLTECH.csv  HDFCBANK.csv  HDFCLIFE.csv  HINDALCO.csv  HINDUNILVR.csv  ICICIBANK.csv  INDIGO.csv  INFY.csv  ITC.csv  JIOFIN.csv  JSWSTEEL.csv  KOTAKBANK.csv  LT.csv  M&M.csv  MARUTI.csv  MAXHEALTH.csv  NESTLEIND.csv  NIFTYBEES.csv  NTPC.csv  ONGC.csv  POWERGRID.csv  RELIANCE.csv  SBILIFE.csv  (+13 more)
include/: Backtester.hpp  CsvReader.hpp  Metrics.hpp  PriceData.hpp  ResultWriter.hpp  Strategy.hpp
results/: daily_results.csv  trades.csv
scripts/: check_data_quality.py  download_yahoo_data.py
src/: Backtester.cpp  CsvReader.cpp  Metrics.cpp  ResultWriter.cpp  Strategy.cpp  main.cpp
